# yatl

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
tests/: __init__.py  test_helpers.py  test_template.py
yatl/: __init__.py  helpers.py  sanitizer.py  template.py
